instructions.Instructions.scala.error
Erreur de compilation :
Instructions:1: error: not found: type bleu
setCouleurBrosse(C:bleu)
                   ^Instructions:1: error: not found: value C
setCouleurBrosse(C:bleu)
                 ^